# atto

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  STYLE_GUIDE.md  TODO.md  atto.spec  color-transformer.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.md
backend/: AGENTS.md  dev_tui.py  pyproject.toml  run.py
backend/app/: db_init.py  main.py  run.py  seed.py
backend/app/assets/: paper_data.json  system.html
backend/app/clients/: __init__.py  cloud_api_client.py  llm_client.py  scraping_client.py
backend/app/clients/application_analysis/: __init__.py  base_client.py  local_client.py
backend/app/clients/application_analysis/local/: __init__.py  ai_suggestions.py  analysis_text.py  client.py  content_quality.py  prompts.py  schemas.py  skills_comparison.py  (+1 more)
backend/app/clients/listing_research/: __init__.py  base_client.py  cloud_client.py  constants.py  local_client.py  schemas.py
backend/app/clients/llm/: __init__.py  base_client.py  local_client.py
backend/app/clients/model/: __init__.py  base_client.py  cloud_client.py  gemini_client.py  openai_client.py
backend/app/clients/scraping/: __init__.py  base_client.py  local_client.py  schemas.py
backend/app/config/: manager.py  schemas.py
backend/app/exception_handlers/: __init__.py  application_error.py  duplicate_error.py  not_found.py  request_validation_error.py  service_error.py  validation_error.py
backend/app/middleware/: __init__.py  auth.py  logging.py
backend/app/repositories/: __init__.py  application_repository.py  database_repository.py  experience_repository.py  file_repository.py  json_repository.py  listing_repository.py  profile_repository.py  resume_repository.py  stats_repository.py  template_repository.py
backend/app/repositories/base/: __init__.py  database_repository.py  file_repository.py  in_memory_kv_repository.py  json_repository.py  vector_repository.py
backend/app/resources/prompts/: __init__.py  application_analysis.py  company_insights.py  listing_extraction.py  resume_optimization.py
backend/app/resources/scripts/: __init__.py
backend/app/routers/: __init__.py  application_router.py  applications_router.py  config_router.py  dashboard_router.py  developer_router.py  experience_router.py  experiences_router.py  listing_router.py  listings_router.py  paper_mode_router.py  profile_router.py  resume_router.py  resumes_router.py  stats_router.py  template_router.py  templates_router.py
backend/app/schemas/: __init__.py  application.py  experience.py  insights.py  listing.py  listing_draft.py  profile.py  resume.py  scraping.py  stats.py  task_status.py  template.py  types.py
backend/app/services/: __init__.py  application_service.py  applications_service.py  experiences_service.py  listing_service.py  listings_service.py  llm_service.py  model_setup_service.py  profile_service.py  resumes_service.py  scraping_service.py  template_service.py
backend/app/services/application/: __init__.py  service.py
backend/app/services/config/: __init__.py  config_service.py
backend/app/services/listing/: __init__.py  drafts.py  duplicates.py  prompts.py  schemas.py  service.py
backend/app/services/paper_mode/: __init__.py  schemas.py  service.py  transforms.py
backend/app/services/resume/: __init__.py  optimization.py  prompts.py  schemas.py  service.py
backend/app/services/stats/: __init__.py  service.py  status_events.py
backend/app/services/template/: __init__.py  html.py  pdf.py  service.py
backend/app/utils/: auth_context.py  deduplication.py  errors.py  git.py  hash.py  math.py  status_ordering.py  text.py
backend/modes/: headless.py  server_manager.py  tui.py
backend/scripts/paper/: analysis.py  builder.py  generate_fixture.py  llm.py  profile.json  prompts.py  resume.json  schemas.py
backend/scripts/seed/: data.json  default_resume.json  profile.json  run.py
backend/tests/: conftest.py
backend/tests/application_analysis/: conftest.py  constants.py  factories.py
backend/tests/application_analysis/eval/: conftest.py  golden_cases.py  test_ai_suggestions.py  test_content_quality_by_section.py  test_match_score.py  test_skills_radar.py
backend/tests/application_analysis/integration/: conftest.py  test_application_analysis_flow.py
backend/tests/application_analysis/unit/: test_ai_suggestions.py  test_content_quality.py  test_match_score.py  test_skill_scoring.py
backend/tests/fakes/: __init__.py  application_repository.py  listing_repository.py  listing_research_client.py  model_client.py  scraping_client.py
backend/tests/listing_draft/: factories.py
backend/tests/listing_draft/eval/: conftest.py  golden_cases.py  test_draft_quality_judge.py  test_valid_listing_extraction.py
backend/tests/listing_draft/integration/: conftest.py  test_generate_listing_draft.py
backend/tests/listing_draft/unit/: test_drafts.py  test_duplicates.py
cloud/: .env.example  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml  run.py
cloud/app/: db.py  dependencies.py  main.py  seed.py
cloud/app/clients/: base_client.py  base_client_distributed_wait.py  database_client.py  gemini_client.py  glassdoor_client.py  market_client.py  provider_client.py  redis_client.py  salary_client.py
cloud/app/endpoints/: base_endpoint.py  glassdoor_sentiment_endpoint.py  market_context_endpoint.py  salary_range_endpoint.py  structured_endpoint.py  unstructured_endpoint.py
cloud/app/exception_handlers/: handlers.py
cloud/app/middleware/: logging.py
cloud/app/models/: user.py
cloud/app/repositories/: user_repository.py
cloud/app/routers/: account_router.py  model_router.py  payment_router.py  research_router.py
cloud/app/schemas/: auth.py  model.py  payment.py  research.py
cloud/app/services/: auth_service.py  client_throttler.py  model_service.py  payment_service.py  request_handler.py  research_service.py  token_budget_service.py
cloud/app/utils/: errors.py  redis_keys.py  settings.py
shared/: AGENTS.md  __init__.py  pyproject.toml
shared/schemas/: application_analysis.py  listing_research.py  model.py  types.py
(+531 files in other folders)
