[project]
name = "atto-app"
version = "0.2.3"
description = "A local-first job application tracker that runs as a local web app."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "LicenseRef-Atto-Limited-Use"
license-files = ["LICENSE.md"]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "chromadb>=1.5.9",
  "openai>=1.0.0",
  "google-genai>=1.0.0",
  "crawl4ai>=0.8.6",
  "ddgs>=9.11.0",
  "playwright>=1.40.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.0.0",
  "pydantic[email]",
  "pypdf>=6.0.0",
  "rapidfuzz>=3.0.0",
  "jinja2>=3.0.0",
  "textual>=7.5.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
atto = "atto.run:main"

[project.urls]
Homepage = "https://atto.austinkong.me"
Repository = "https://github.com/AustinKong/atto"
Issues = "https://github.com/AustinKong/atto/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = [
  "atto",
  "app",
  "app.assets",
  "app.clients",
  "app.clients.application_analysis",
  "app.clients.application_analysis.local",
  "app.clients.listing_research",
  "app.clients.listing_research.local",
  "app.clients.model",
  "app.clients.scraping",
  "app.config",
  "app.exception_handlers",
  "app.managers",
  "app.middleware",
  "app.repositories",
  "app.repositories.base",
  "app.routers",
  "app.schemas",
  "app.services",
  "app.services.application",
  "app.services.listing",
  "app.services.paper_mode",
  "app.services.resume",
  "app.services.stats",
  "app.services.template",
  "app.utils",
  "modes",
  "shared",
  "shared.schemas",
]

[tool.setuptools.package-dir]
atto = "atto"
app = "backend/app"
modes = "backend/modes"
shared = "shared"
"shared.schemas" = "shared/schemas"

[tool.setuptools.package-data]
"app.assets" = ["*"]
atto = ["frontend-dist/**/*"]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py311"
lint.extend-select = ["E", "F", "B", "UP", "I"]
fix = true
show-fixes = true

[tool.ruff.lint.isort]
known-first-party = ["app", "atto", "modes", "shared"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
