[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "chromadb>=0.5.0",
  "openai>=1.0.0",
  "google-genai>=1.0.0",
  "crawl4ai>=0.8.0",
  "ddgs>=9.11.0",
  "playwright>=1.40.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.0.0",
  "pydantic[email]",
  "rapidfuzz>=3.0.0",
  "jinja2>=3.0.0",
  "textual>=7.5.0",
  "shared @ file:../shared",
]

[project.optional-dependencies]
dev = [
  "pyinstaller",
  "ruff",
  "pytest",
  "textual-dev",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py311"
lint.extend-select = ["E", "F", "B", "UP", "I"]
fix = true
show-fixes = true

[tool.ruff.lint.isort]
known-first-party = ["app", "shared"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
